--- a/css/master.css
+++ b/css/master.css
@@ -1846,69 +1846,44 @@ footer {
     background-attachment: fixed; } }
 
 .tabs {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  width: 100%;
-  margin: 0;
-  padding: 1rem 0 0; }
+  display: block;
+  padding: 2rem 2rem 0; }
   .tabs ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
+    position: relative;
     margin: 0;
-    padding: 0;
-    list-style-type: none; }
+    padding: 0; }
     .tabs ul li {
-      flex-direction: column;
-      justify-content: center;
+      display: inline-block;
       width: auto;
-      padding: 1rem 1.5rem;
-      border-right: 1px solid #cccccc;
-      font-family: "Montserrat", sans-serif;
-      font-weight: 700;
-      font-size: 0.8rem;
-      line-height: 1.3;
-      text-align: center;
-      color: #df3a32;
-      cursor: pointer;
-      -webkit-transition: all 0.5s ease 0s;
-      -moz-transition: all 0.5s ease 0s;
-      -ms-transition: all 0.5s ease 0s;
-      -o-transition: all 0.5s ease 0s;
-      transition: all 0.5s ease 0s; }
-      .tabs ul li svg {
-        margin: 0 auto 0.5rem;
-        fill: #df3a32; }
-    .tabs ul li:hover, .tabs ul li:focus, .tabs ul li.active {
-      color: #003442; }
-      .tabs ul li:hover svg, .tabs ul li:focus svg, .tabs ul li.active svg {
-        fill: #003442; }
-    .tabs ul li:last-of-type {
-      border-right: none; }
-  .tabs .tab-group {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start; }
-    .tabs .tab-group .tab {
-      width: 0;
+      margin: 0 0.5rem 0 0;
+      padding: 0; }
+      .tabs ul li button {
+        margin: 0;
+        border-color: #df3a32;
+        color: #df3a32;
+        background-color: #ffffff; }
+      .tabs ul li button:hover, .tabs ul li button:focus {
+        color: #ffffff;
+        background-color: #df3a32; }
+    .tabs ul li button.is-active {
+      color: #ffffff;
+      background-color: #df3a32; }
+  .tabs .panels {
+    margin: 1rem 0 0;
+    padding: 0; }
+    .tabs .panels .panel {
+      display: none;
       height: 0;
-      -webkit-transform: scale(0);
-      -moz-transform: scale(0);
-      -ms-transform: scale(0);
-      -o-transform: scale(0);
-      transform: scale(0);
-      -webkit-transition: all 0.5s ease 0s;
-      -moz-transition: all 0.5s ease 0s;
-      -ms-transition: all 0.5s ease 0s;
-      -o-transition: all 0.5s ease 0s;
-      transition: all 0.5s ease 0s; }
-    .tabs .tab-group .tab.active {
-      width: auto;
+      padding: 0;
+      -webkit-transition: all 0.325s ease 0s;
+      -moz-transition: all 0.325s ease 0s;
+      -ms-transition: all 0.325s ease 0s;
+      -o-transition: all 0.325s ease 0s;
+      transition: all 0.325s ease 0s; }
+    .tabs .panels .panel.is-current {
+      display: block;
       height: 100%;
-      -webkit-transform: scale(1);
-      -moz-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      transform: scale(1); }
+      padding: 1rem;
+      border: 1px solid #eeeeee;
+      border-radius: 0.25rem;
+      opacity: 1; }
