--- a/css/_molecules/_search.scss
+++ b/css/_molecules/_search.scss
@@ -21,9 +21,8 @@ nav .search {
     border-radius: 0 0.25rem 0.25rem 0;
     @include transition(all, 0.325s, ease);
   }
+  span.trigger {display: none;}
 }
-
-button.trigger {display: none;}
 
 nav.open .search {
   display: flex;
@@ -32,18 +31,6 @@ nav.open .search {
 }
 
 @media (min-width: 48rem) {
-  button.trigger {
-    display: inline-flex;
-    position: absolute;
-    right: 0;
-    z-index: 10;
-    max-height: none;
-    margin: 0;
-    padding: 0.5rem;
-    cursor: pointer;
-    @include transition(all, 0.325s, ease);
-    @include transform(scale(1));
-  }
   nav .search {
     display: flex;
     align-items: center;
@@ -63,19 +50,12 @@ nav.open .search {
       label {display: none;}
       .input-icon {
         display: flex;
-        top: 0.25rem;
+        top: 0;
         right: 6rem;
-        margin: 0;
-        padding: 0;
-        border: none;
-        background-color: transparent;
         @include transition(all, 0.325s, ease);
         @include transform(scale(0));        
       }
-      .input-icon svg {
-        height: 2rem;
-        @include transition(all, 0.25s, ease);
-      }
+      .input-icon svg {@include transition(all, 0.25s, ease);}
       .input-icon:hover svg, .input-icon:focus svg {fill: $secondary;}
     }
     button[type="submit"] {
@@ -85,6 +65,18 @@ nav.open .search {
       border-radius: 0 0.25rem 0.25rem 0;
       @include transform(scale(0));
     }
+    span.trigger {
+      display: inline-flex;
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: 100%;
+      max-height: none;
+      margin: 0;
+      padding: 0.5rem;
+      @include transition(all, 0.325s, ease);
+      @include transform(scale(1));
+    }
   }
   nav .search.open {
     z-index: 100;
@@ -92,13 +84,13 @@ nav.open .search {
       @include transform(scale(1));
       .input-icon {@include transform(scale(1,1));}
     }
+    span.trigger {
+      display: none;
+      @include transform(scale(0));
+    }
     button[type="submit"] {
       display: inline-flex;
       @include transform(scale(1));
     }
-  }
-  button.trigger.hidden {
-    display: none;
-    @include transform(scale(0));
   }
 }
