Revert and update Search
Last update to Search created a situation where the screen would flash when the user closed the search field on widescreens; also, on mobile devices, when the user tapped into the search field, the page would scroll unconventionally (bug); still need to add keyboard accessiblity to widescreen Search features, but mobile bug is fixed.

--- a/css/_global/_base.scss
+++ b/css/_global/_base.scss
@@ -27,7 +27,12 @@ body, .body {
   padding: 0;
 }
 
-body.open {overflow-y: hidden;}
+body.open {
+  position: fixed;
+  height: 100%;
+  max-height: 100vh;
+  overflow-y: hidden;
+}
 
 * {
   -webkit-box-sizing: border-box;
