--- a/css/_molecules/_cards.scss
+++ b/css/_molecules/_cards.scss
@@ -15,6 +15,7 @@
     padding: 0;
     border: 1px solid $lt-gray;
     border-radius: 0.25rem;
+    background-color: $white;
     figure {padding: 0;
       img {border-radius: 0.25rem 0.25rem 0 0;}
       figcaption > cite {
