--- a/css/master.css
+++ b/css/master.css
@@ -495,90 +495,208 @@ ul.chips {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     width: auto;
-    height: 2rem;
-    max-height: 2rem;
     margin: 0.5rem 0.5rem 0 0;
-    padding: 0;
-    border-radius: 2rem;
-    background-color: #eeeeee;
-    cursor: pointer;
-    -webkit-transition: all 0.25s ease 0s;
-    -moz-transition: all 0.25s ease 0s;
-    -ms-transition: all 0.25s ease 0s;
-    -o-transition: all 0.25s ease 0s;
-    transition: all 0.25s ease 0s; }
+    padding: 0; }
     ul.chips li span {
-      padding: 0 0.75rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: auto;
+      height: 2rem;
+      max-height: 2rem;
+      padding: 0 1rem;
+      border-radius: 2rem;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 400;
+      color: #000000;
+      background-color: #eeeeee;
       -webkit-transition: all 0.25s ease 0s;
       -moz-transition: all 0.25s ease 0s;
       -ms-transition: all 0.25s ease 0s;
       -o-transition: all 0.25s ease 0s;
       transition: all 0.25s ease 0s; }
-    ul.chips li svg {
-      width: 1.5rem;
-      fill: #919191; }
-    ul.chips li svg.close {
-      width: 1.125rem;
-      margin: 0 0.25rem 0 -0.5rem;
+    ul.chips li button {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      width: auto;
+      height: 2rem;
+      max-height: 2rem;
+      margin: 0;
+      padding: 0 1rem;
+      border: none;
+      border-radius: 2rem;
+      font-family: "Montserrat", sans-serif;
+      font-weight: 400;
+      color: #000000;
+      background-color: #eeeeee;
+      cursor: pointer;
       -webkit-transition: all 0.25s ease 0s;
       -moz-transition: all 0.25s ease 0s;
       -ms-transition: all 0.25s ease 0s;
       -o-transition: all 0.25s ease 0s;
       transition: all 0.25s ease 0s; }
-    ul.chips li svg.close:hover, ul.chips li svg.close:focus {
-      fill: #000000; }
-  ul.chips li.icon-left svg {
-    margin: 0 0 0 0.25rem; }
+      ul.chips li button svg.check {
+        width: 0;
+        margin: 0;
+        fill: #000000;
+        -webkit-transform: scale(0);
+        -moz-transform: scale(0);
+        -ms-transform: scale(0);
+        -o-transform: scale(0);
+        transform: scale(0);
+        -webkit-transition: all 0.25s ease 0s;
+        -moz-transition: all 0.25s ease 0s;
+        -ms-transition: all 0.25s ease 0s;
+        -o-transition: all 0.25s ease 0s;
+        transition: all 0.25s ease 0s; }
+      ul.chips li button svg.check.show {
+        width: 1rem;
+        margin: 0 0.25rem 0 0;
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        transform: scale(1); }
+    ul.chips li button:hover, ul.chips li button:focus {
+      background-color: #919191; }
   ul.chips li.icon-left span {
-    padding: 0 0.75rem 0 0.25rem; }
-  ul.chips li.icon-left svg.close {
-    margin: 0 0.25rem 0 -0.5rem; }
+    padding: 0 1rem 0 0.25rem; }
+    ul.chips li.icon-left span svg {
+      margin: 0 0.5rem 0 0;
+      fill: #919191; }
   ul.chips li.icon-right span {
-    padding: 0 0.25rem 0 0.75rem; }
-  ul.chips li.icon-right svg {
-    margin: 0 0.25rem 0 0; }
-  ul.chips li:hover, ul.chips li:focus {
-    background-color: #cccccc; }
-  ul.chips li svg.check {
-    width: 0;
-    margin: 0;
-    fill: #000000;
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transform: scale(0);
-    -webkit-transition: all 0.25s ease 0s;
-    -moz-transition: all 0.25s ease 0s;
-    -ms-transition: all 0.25s ease 0s;
-    -o-transition: all 0.25s ease 0s;
-    transition: all 0.25s ease 0s; }
-  ul.chips li svg.check.show {
-    width: 1.5rem;
-    margin: 0 0 0 0.25rem;
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    transform: scale(1); }
-  ul.chips li svg.check.show + span {
-    padding: 0 0.75rem 0 0.25rem; }
-  ul.chips li.dismissed {
-    width: 0;
-    margin: 0;
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
-    transform: scale(0); }
-  ul.chips li.avatar img {
-    width: 2rem;
-    height: 2rem;
-    border-radius: 100%; }
-  ul.chips li.avatar img + span {
-    padding: 0 0.75rem 0 0.25rem; }
+    padding: 0 0.25rem 0 1rem; }
+    ul.chips li.icon-right span svg {
+      margin: 0 0 0 0.5rem;
+      fill: #919191; }
+  ul.chips li.avatar span {
+    padding: 0 1rem 0 0; }
+    ul.chips li.avatar span img {
+      width: 2rem;
+      height: 2rem;
+      margin: 0 0.5rem 0 0;
+      border-radius: 100%; }
+
+ul.chips.dismiss li {
+  justify-content: flex-start;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s; }
+  ul.chips.dismiss li span {
+    padding: 0 0.25rem 0 1rem; }
+    ul.chips.dismiss li span button {
+      padding: 0;
+      background-color: transparent; }
+      ul.chips.dismiss li span button svg {
+        fill: #000000;
+        -webkit-transition: all 0.25s ease 0s;
+        -moz-transition: all 0.25s ease 0s;
+        -ms-transition: all 0.25s ease 0s;
+        -o-transition: all 0.25s ease 0s;
+        transition: all 0.25s ease 0s; }
+    ul.chips.dismiss li span button:hover svg, ul.chips.dismiss li span button:focus svg {
+      fill: #919191; }
+
+ul.chips.dismiss li.dismissed {
+  width: 0;
+  margin: 0;
+  -webkit-transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  transform: scale(0); }
+
+ul.chips.dismiss li.dismiss-reset span {
+  padding: 0 0.75rem;
+  cursor: pointer;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s; }
+
+ul.chips.dismiss li.dismiss-reset span:hover, ul.chips.dismiss li.dismiss-reset span:focus {
+  background-color: #919191; }
+
+ul.chips.dismiss li.avatar {
+  justify-content: flex-start;
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s; }
+  ul.chips.dismiss li.avatar span {
+    padding: 0 0.25rem 0 0; }
+    ul.chips.dismiss li.avatar span button {
+      padding: 0 0 0 0.25rem;
+      background-color: transparent; }
+      ul.chips.dismiss li.avatar span button svg {
+        fill: #000000;
+        -webkit-transition: all 0.25s ease 0s;
+        -moz-transition: all 0.25s ease 0s;
+        -ms-transition: all 0.25s ease 0s;
+        -o-transition: all 0.25s ease 0s;
+        transition: all 0.25s ease 0s; }
+    ul.chips.dismiss li.avatar span button:hover svg, ul.chips.dismiss li.avatar span button:focus svg {
+      fill: #919191; }
+
+ul.chips.dismiss li.icon-left span {
+  padding: 0 0.25rem; }
+  ul.chips.dismiss li.icon-left span button svg {
+    margin: 0; }
+
+ul.chips.dismiss li.icon-right span {
+  padding: 0 0.25rem 0 1rem; }
+  ul.chips.dismiss li.icon-right span button svg {
+    margin: 0; }
+
+/* CHIP COLOR OPTIONS */
+ul.chips.bg-primary {
+  background-color: transparent; }
+  ul.chips.bg-primary li button, ul.chips.bg-primary li span {
+    color: #ffffff;
+    background-color: #df3a32; }
+    ul.chips.bg-primary li button svg, ul.chips.bg-primary li span svg {
+      fill: #ffffff; }
+  ul.chips.bg-primary li button:hover, ul.chips.bg-primary li button:focus {
+    background-color: #003442; }
+
+ul.chips.dismiss.bg-primary {
+  background-color: transparent; }
+  ul.chips.dismiss.bg-primary li button, ul.chips.dismiss.bg-primary li span, ul.chips.dismiss.bg-primary li.avatar button, ul.chips.dismiss.bg-primary li.avatar span {
+    color: #ffffff;
+    background-color: #df3a32; }
+    ul.chips.dismiss.bg-primary li button svg, ul.chips.dismiss.bg-primary li span svg, ul.chips.dismiss.bg-primary li.avatar button svg, ul.chips.dismiss.bg-primary li.avatar span svg {
+      fill: #ffffff; }
+  ul.chips.dismiss.bg-primary li button:hover, ul.chips.dismiss.bg-primary li button:focus, ul.chips.dismiss.bg-primary li.avatar button:hover, ul.chips.dismiss.bg-primary li.avatar button:focus {
+    background-color: transparent; }
+
+ul.chips.bg-secondary {
+  background-color: transparent; }
+  ul.chips.bg-secondary li button, ul.chips.bg-secondary li span {
+    color: #ffffff;
+    background-color: #003442; }
+    ul.chips.bg-secondary li button svg, ul.chips.bg-secondary li span svg {
+      fill: #ffffff; }
+  ul.chips.bg-secondary li button:hover, ul.chips.bg-secondary li button:focus {
+    background-color: #df3a32; }
+
+ul.chips.dismiss.bg-secondary {
+  background-color: transparent; }
+  ul.chips.dismiss.bg-secondary li button, ul.chips.dismiss.bg-secondary li span, ul.chips.dismiss.bg-secondary li.avatar button, ul.chips.dismiss.bg-secondary li.avatar span {
+    color: #ffffff;
+    background-color: #003442; }
+    ul.chips.dismiss.bg-secondary li button svg, ul.chips.dismiss.bg-secondary li span svg, ul.chips.dismiss.bg-secondary li.avatar button svg, ul.chips.dismiss.bg-secondary li.avatar span svg {
+      fill: #ffffff; }
+  ul.chips.dismiss.bg-secondary li button:hover, ul.chips.dismiss.bg-secondary li button:focus, ul.chips.dismiss.bg-secondary li.avatar button:hover, ul.chips.dismiss.bg-secondary li.avatar button:focus {
+    background-color: transparent; }
 
 span.badge {
   display: flex;
