--- a/css/master.scss
+++ b/css/master.scss
@@ -13,10 +13,11 @@
 @import "_molecules/accordions";
 @import "_molecules/cards";
 @import "_molecules/blockquotes";
-@import "_molecules/media-grid-items";
+@import "_molecules/media-grid";
 @import "_molecules/messages";
 
 @import "_organisms/headers";
 @import "_organisms/footers";
 @import "_organisms/banners";
 @import "_organisms/tabs";
+@import "_organisms/gallery-grid";
