--- a/css/master.scss
+++ b/css/master.scss
@@ -6,6 +6,7 @@
 @import "_atoms/figures";
 @import "_atoms/chips";
 @import "_atoms/badges";
+@import "_atoms/feedback";
 
 @import "_molecules/navigation";
 @import "_molecules/forms";
