--- a/css/master.scss
+++ b/css/master.scss
@@ -8,7 +8,6 @@
 @import "_atoms/badges";
 @import "_atoms/feedback";
 
-@import "_molecules/navigation";
 @import "_molecules/forms";
 @import "_molecules/search";
 @import "_molecules/accordions";
@@ -19,6 +18,7 @@
 
 @import "_organisms/headers";
 @import "_organisms/footers";
+@import "_organisms/navigation";
 @import "_organisms/banners";
 @import "_organisms/tabs";
 @import "_organisms/gallery-grid";
