--- a/css/master.scss
+++ b/css/master.scss
@@ -4,6 +4,7 @@
 
 @import "_atoms/buttons";
 @import "_atoms/figures";
+@import "_atoms/blockquotes";
 @import "_atoms/chips";
 @import "_atoms/badges";
 @import "_atoms/feedback";
@@ -12,7 +13,6 @@
 @import "_molecules/search";
 @import "_molecules/accordions";
 @import "_molecules/cards";
-@import "_molecules/blockquotes";
 @import "_molecules/media-grid";
 @import "_molecules/messages";
 
