--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -34,9 +34,11 @@ ul + h1, ul + h2, ul + h3, ul + h4,
 ol + h1, ol + h2, ol + h3, ol + h4,
 dl + h1, dl + h2, dl + h3, dl + h4 {padding: 2rem 0 0;}
 
+/*
 ul + h2, ul + h3, ul + h4,
 ol + h2, ol + h3, ol + h4,
 dl + h2, dl + h3, dl + h4 {padding: 1rem 0 0;}
+*/
 
 p {
   width: 100%;
@@ -100,6 +102,8 @@ ul {list-style-type: disc;}
 ul.no-bullets {
   padding: 1rem 0 0 0;
   list-style-type: none;
+  li {padding: 0 0 1rem 0;}
+  li:last-child {padding: 0;}
 }
 
 ol {list-style-type: decimal;}
@@ -111,7 +115,7 @@ ul li, ol li {
   padding: 0 0 1rem 0.25rem;
 }
 
-ul + p, ol + p {padding: 0;}
+ul li:last-child, ol li:last-child {padding: 0 0 0 0.25rem;}
 
 
 // DEFINITION LISTS
