--- a/css/_organisms/_footers.scss
+++ b/css/_organisms/_footers.scss
@@ -18,6 +18,7 @@ footer {
         padding: 0 0 1rem;
         text-align: center;
       }
+      li:last-child {padding: 0 0 1rem;}
     }
   }
   section.brand-content {
